minor changes to css style: updated the display style to avoid situations where the project name moves out of the visible area; updated background of buttons so that they are always opaque (this is useful when the window is resized and the buttons go over the project name)

--- a/src/client/css/style.css
+++ b/src/client/css/style.css
@@ -462,6 +462,7 @@ div.detailsForm select, div.detailsForm textarea{
 	color: white;
 	font: 20px sans-serif;
     opacity: 0.96;
+    display: inline-flex;
 }
 #projectTitle div.btn.txtProjectName {
     font-size: large;
@@ -475,6 +476,7 @@ div.detailsForm select, div.detailsForm textarea{
     color: white;
 }
 #projectTitle a {
+    background: rgb(8, 88, 154);
 	color: #f5eee5;
     min-height: 52px;
     padding-top: 16px;
